force-app/main/default/objects/Member_Update_Event__e/Member_Update_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event to capture Loyalty Program Member record creation and being updated to notify Wallet Service to re-generate passes.</description>
    <label>Member Update Event</label>
    <pluralLabel>Member Update Events</pluralLabel>
</CustomObject>