force-app/main/default/objects/Member_Update_Event__e/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <label>Member Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>