force-app/main/default/objects/Member_Update_Event__e/fields/WSCallTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>WSCallTimeStamp__c</fullName>
    <label>WSCallTimeStamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>