force-app/main/default/objects/Member_Update_Event__e/fields/WSRespTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>WSRespTimeStamp__c</fullName>
    <description>unixtimestamp</description>
    <label>WSRespTimeStamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>